2006-02-16 Max Horváth <max.horvath@maxspot.de>
    * added full PHPdoc documentation to Mail class
    * added more temporary-email-address-providers to the black-list
	* Login site now uses a Smarty template to render HTML page
	* Refactored signup site - now it also includes the help toolbox
	* removed Phlickr directory in /lib dir as Phlickr must be installed via
	  PEAR
	* modified gen.sh to include new template folders for the
	  translation file generation

2006-02-15 Max Horváth <max.horvath@maxspot.de>
	* Login site now uses a Smarty template to render HTML page

2006-02-14 Max Horváth <max.horvath@maxspot.de>
	* converted Session class to PHP5 style
	* moved code used used to init PHP into wifidog/include/init_php.php
	* fixed bug regarding APC (super globals weren't initialized before their
	  first use
	* in an attemp to enter the administration interface of WiFiDog and not
	  being logged in you'll be redirected to the administration interface after
	  a successful login, if you are an admin or owner of a node. This only
	  works for a virtual login, as it isn't needed to be done when logging in
	  via a WiFiDog node (then you have to login anyway on the splash page
	  first)
	* fixed preview of network in administration interface as content for a
	  network as is isn't available in the code, yet

2006-02-13 Rob Janes <janes.rob@gmail.com>
    * cron/cleanup.php needed new way to call common.php
	* added cron/vacuum.php to round things out

2006-02-07 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix a bunch of file inclusion bugs in the statistics subsystem.
	  This is only a ad-hac fix. It seems the requires for just about every
	  class have been stripped off. This must be fixed, all classes should
	  require_once all classes or include that they need that isn't included by
	  a parent class.

2006-02-06 Benoit Grégoire  <bock@step.polymtl.ca>
	* wifidog/local_content/default/hotspot_logo.jpg: Delete deprecated file